--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,9 @@
 /dist
 /tmp
 /out-tsc
-/server/public
 
 # dependencies
 /node_modules
-/server/node_modules
 
 # IDEs and editors
 /.idea
@@ -32,12 +30,9 @@
 /coverage
 /libpeerconnection.log
 npm-debug.log
+yarn-error.log
 testem.log
 /typings
-
-# e2e
-/e2e/*.js
-/e2e/*.map
 
 # System Files
 .DS_Store
